<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StockInformationActivity">

    <!--This TextView shows the title of the Activity -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/stockInfo"
        android:textSize="40sp"/>

    <!--This TextView is a header that informs the user that bellow is the stock ticker -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/ticker"
        android:gravity="center"
        android:textSize="25sp" />

    <!--This TextView shows the ticker of the selected stock-->
    <TextView
        android:id="@+id/tickerText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="15sp" />

    <!--This TextView is a header that informs the user that bellow is the company name -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/companyName"
        android:gravity="center"
        android:textSize="25sp"/>

    <!--This TextView shows the company name of the selected stock -->
    <TextView
        android:id="@+id/companyText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="15sp" />

    <!--This TextView is a header that informs the user that bellow is the stock price -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/currentPrice"
        android:gravity="center"
        android:textSize="25sp" />

    <!--This TextView shows the price of the selected stock -->
    <TextView
        android:id="@+id/priceText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="15sp" />

    <!--This TextView is a header that informs the user that bellow is the currency type -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/currencyType"
        android:gravity="center"
        android:textSize="25sp"/>

    <!--This TextView shows the currency type of the selected stock -->
    <TextView
        android:id="@+id/currencyText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="15sp" />

    <!--This TextView is a header that informs the user that bellow is the stock exchange -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/stockExchange"
        android:gravity="center"
        android:textSize="25sp"/>

    <!--This TextView shows the stock exchange of the selected stock -->
    <TextView
        android:id="@+id/exchangeText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="15sp" />

</LinearLayout>