<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FinancialHintsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:text="@string/financialHints"
        android:gravity="center"
        android:textSize="40sp" />

    <FrameLayout
        android:id="@+id/hintFragmentPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></FrameLayout>s

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_weight="0.1"
        android:background="@drawable/rounded_button"
        android:onClick="openArticle"
        android:text="@string/fullArticle" />

        <Button
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/nextBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:onClick="newHint"
            android:text="@string/newHintBtn"
            android:background="@drawable/rounded_button" />

    </LinearLayout>
